@@ -1,0 +1,12 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+<h2>Search for a PNG:</h2>
+<form enctype='multipart/form-data' action='search_result' method='POST'>
+<p>Image Name: <input type='text' name='name' size=25></p>
+<p>Description: <input type='text' name='desc' size=50></p>
+<p><input type='submit'></p>
+</form>
+
+{% endblock %}
