@@ -12,8 +12,8 @@
     <tr>
     {% endif %}
       <td width=60 height=60 align="center" bgcolor="#F5F5F5">
-        <a href='/pics/{{ name  }}'>
-          <img src='/pics/{{ name  }}' width=50 height=50>
+        <a href='/pics/{{ name }}'>
+          <img src='/pics/{{ name }}' width=50 height=50>
         </a>
       </td>
     {% if (loop.index + 1) is divisibleby 5 or loop.last %}
