@@ -126,3 +126,7 @@
  * Project 6: I added metadata uploading to the imageapp. The name and
        description of the image are stored in a dictionary with the image.
 
+2014-03-30  Jason Lefler <leflerja@arctic.cse.msu.edu>
+
+ * imageapp/search.html: Added this to search image metadata
+
